@@ -1,5 +1,6 @@
 1.1
 - Incorrect relational operations now raise an exception instead of returning None
+- Forces relations to have correct names for attributes
 
 1.0
 - Adds history in the GUI
